@@ -550,6 +550,16 @@ name|Before
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
 begin_comment
 comment|/**  * Test for ReplicationHandler  *  *  * @since 1.4  */
 end_comment
@@ -655,6 +665,7 @@ operator|.
 name|setUp
 argument_list|()
 expr_stmt|;
+comment|//    System.setProperty("solr.directoryFactory", "solr.StandardDirectoryFactory");
 comment|// For manual testing only
 comment|// useFactory(null); // force an FS factory
 name|master
@@ -1543,47 +1554,10 @@ return|return
 name|res
 return|;
 block|}
-DECL|method|test
-specifier|public
-name|void
-name|test
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|doTestReplicateAfterCoreReload
-argument_list|()
-expr_stmt|;
-name|doTestDetails
-argument_list|()
-expr_stmt|;
-name|doTestReplicateAfterWrite2Slave
-argument_list|()
-expr_stmt|;
-name|doTestIndexAndConfigReplication
-argument_list|()
-expr_stmt|;
-name|doTestStopPoll
-argument_list|()
-expr_stmt|;
-name|doTestSnapPullWithMasterUrl
-argument_list|()
-expr_stmt|;
-name|doTestReplicateAfterStartup
-argument_list|()
-expr_stmt|;
-name|doTestReplicateAfterStartupWithNoActivity
-argument_list|()
-expr_stmt|;
-name|doTestIndexAndConfigAliasReplication
-argument_list|()
-expr_stmt|;
-name|doTestBackup
-argument_list|()
-expr_stmt|;
-block|}
+annotation|@
+name|Test
 DECL|method|doTestDetails
-specifier|private
+specifier|public
 name|void
 name|doTestDetails
 parameter_list|()
@@ -1860,8 +1834,10 @@ comment|/* :NOOP: */
 block|}
 block|}
 block|}
+annotation|@
+name|Test
 DECL|method|doTestReplicateAfterWrite2Slave
-specifier|private
+specifier|public
 name|void
 name|doTestReplicateAfterWrite2Slave
 parameter_list|()
@@ -1905,51 +1881,26 @@ name|i
 argument_list|)
 expr_stmt|;
 block|}
-name|String
-name|masterUrl
-init|=
-literal|"http://127.0.0.1:"
-operator|+
+name|invokeReplicationCommand
+argument_list|(
 name|masterJetty
 operator|.
 name|getLocalPort
 argument_list|()
-operator|+
-literal|"/solr/replication?command=disableReplication"
-decl_stmt|;
-name|URL
-name|url
-init|=
-operator|new
-name|URL
-argument_list|(
-name|masterUrl
+argument_list|,
+literal|"disableReplication"
 argument_list|)
-decl_stmt|;
-name|InputStream
-name|stream
-init|=
-name|url
-operator|.
-name|openStream
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-name|stream
-operator|.
-name|close
-argument_list|()
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|//e.printStackTrace();
-block|}
+name|invokeReplicationCommand
+argument_list|(
+name|slaveJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|,
+literal|"disablepoll"
+argument_list|)
+expr_stmt|;
 name|masterClient
 operator|.
 name|commit
@@ -2154,34 +2105,75 @@ name|getNumFound
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|masterUrl
-operator|=
-literal|"http://127.0.0.1:"
-operator|+
+comment|//Let's fetch the index rather than rely on the polling.
+name|invokeReplicationCommand
+argument_list|(
 name|masterJetty
 operator|.
 name|getLocalPort
 argument_list|()
-operator|+
-literal|"/solr/replication?command=enableReplication"
+argument_list|,
+literal|"enablereplication"
+argument_list|)
 expr_stmt|;
-name|url
-operator|=
+name|invokeReplicationCommand
+argument_list|(
+name|slaveJetty
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|,
+literal|"fetchindex"
+argument_list|)
+expr_stmt|;
+comment|/*     //the slave should have done a full copy of the index so the doc with id:555 should not be there in the slave now     slaveQueryRsp = rQuery(0, "id:555", slaveClient);     slaveQueryResult = (SolrDocumentList) slaveQueryRsp.get("response");     assertEquals(0, slaveQueryResult.getNumFound());      // make sure we replicated the correct index from the master     slaveQueryRsp = rQuery(nDocs, "*:*", slaveClient);     slaveQueryResult = (SolrDocumentList) slaveQueryRsp.get("response");     assertEquals(nDocs, slaveQueryResult.getNumFound());          */
+block|}
+comment|//Simple function to wrap the invocation of replication commands on the various
+comment|//jetty servers.
+DECL|method|invokeReplicationCommand
+specifier|private
+name|void
+name|invokeReplicationCommand
+parameter_list|(
+name|int
+name|pJettyPort
+parameter_list|,
+name|String
+name|pCommand
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|String
+name|masterUrl
+init|=
+literal|"http://127.0.0.1:"
+operator|+
+name|pJettyPort
+operator|+
+literal|"/solr/replication?command="
+operator|+
+name|pCommand
+decl_stmt|;
+try|try
+block|{
+name|URL
+name|u
+init|=
 operator|new
 name|URL
 argument_list|(
 name|masterUrl
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+name|InputStream
 name|stream
-operator|=
-name|url
+init|=
+name|u
 operator|.
 name|openStream
 argument_list|()
-expr_stmt|;
-try|try
-block|{
+decl_stmt|;
 name|stream
 operator|.
 name|close
@@ -2196,77 +2188,11 @@ parameter_list|)
 block|{
 comment|//e.printStackTrace();
 block|}
-comment|//the slave should have done a full copy of the index so the doc with id:555 should not be there in the slave now
-name|slaveQueryRsp
-operator|=
-name|rQuery
-argument_list|(
-literal|0
-argument_list|,
-literal|"id:555"
-argument_list|,
-name|slaveClient
-argument_list|)
-expr_stmt|;
-name|slaveQueryResult
-operator|=
-operator|(
-name|SolrDocumentList
-operator|)
-name|slaveQueryRsp
-operator|.
-name|get
-argument_list|(
-literal|"response"
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-name|slaveQueryResult
-operator|.
-name|getNumFound
-argument_list|()
-argument_list|)
-expr_stmt|;
-comment|// make sure we replicated the correct index from the master
-name|slaveQueryRsp
-operator|=
-name|rQuery
-argument_list|(
-name|nDocs
-argument_list|,
-literal|"*:*"
-argument_list|,
-name|slaveClient
-argument_list|)
-expr_stmt|;
-name|slaveQueryResult
-operator|=
-operator|(
-name|SolrDocumentList
-operator|)
-name|slaveQueryRsp
-operator|.
-name|get
-argument_list|(
-literal|"response"
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|nDocs
-argument_list|,
-name|slaveQueryResult
-operator|.
-name|getNumFound
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
+annotation|@
+name|Test
 DECL|method|doTestIndexAndConfigReplication
-specifier|private
+specifier|public
 name|void
 name|doTestIndexAndConfigReplication
 parameter_list|()
@@ -2711,8 +2637,10 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
 DECL|method|doTestStopPoll
-specifier|private
+specifier|public
 name|void
 name|doTestStopPoll
 parameter_list|()
@@ -2858,51 +2786,16 @@ name|cmp
 argument_list|)
 expr_stmt|;
 comment|// start stop polling test
-name|String
-name|slaveURL
-init|=
-literal|"http://127.0.0.1:"
-operator|+
+name|invokeReplicationCommand
+argument_list|(
 name|slaveJetty
 operator|.
 name|getLocalPort
 argument_list|()
-operator|+
-literal|"/solr/replication?command=disablepoll"
-decl_stmt|;
-name|URL
-name|url
-init|=
-operator|new
-name|URL
-argument_list|(
-name|slaveURL
+argument_list|,
+literal|"disablepoll"
 argument_list|)
-decl_stmt|;
-name|InputStream
-name|stream
-init|=
-name|url
-operator|.
-name|openStream
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-name|stream
-operator|.
-name|close
-argument_list|()
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|//e.printStackTrace();
-block|}
 name|index
 argument_list|(
 name|masterClient
@@ -3005,48 +2898,16 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// re-enable replication
-name|slaveURL
-operator|=
-literal|"http://127.0.0.1:"
-operator|+
+name|invokeReplicationCommand
+argument_list|(
 name|slaveJetty
 operator|.
 name|getLocalPort
 argument_list|()
-operator|+
-literal|"/solr/replication?command=enablepoll"
-expr_stmt|;
-name|url
-operator|=
-operator|new
-name|URL
-argument_list|(
-name|slaveURL
+argument_list|,
+literal|"enablepoll"
 argument_list|)
 expr_stmt|;
-name|stream
-operator|=
-name|url
-operator|.
-name|openStream
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|stream
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|//e.printStackTrace();
-block|}
 name|slaveQueryRsp
 operator|=
 name|rQuery
@@ -3085,8 +2946,10 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
 DECL|method|doTestSnapPullWithMasterUrl
-specifier|private
+specifier|public
 name|void
 name|doTestSnapPullWithMasterUrl
 parameter_list|()
@@ -4709,8 +4572,10 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+annotation|@
+name|Test
 DECL|method|doTestReplicateAfterCoreReload
-specifier|private
+specifier|public
 name|void
 name|doTestReplicateAfterCoreReload
 parameter_list|()
@@ -5199,8 +5064,10 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
 DECL|method|doTestIndexAndConfigAliasReplication
-specifier|private
+specifier|public
 name|void
 name|doTestIndexAndConfigAliasReplication
 parameter_list|()
@@ -5628,8 +5495,10 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
 DECL|method|doTestBackup
-specifier|private
+specifier|public
 name|void
 name|doTestBackup
 parameter_list|()
@@ -6885,6 +6754,9 @@ operator|.
 name|recurseDelete
 argument_list|(
 name|homeDir
+operator|.
+name|getParentFile
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
